--- a/notebooks/color_renderer_hparams.ipynb
+++ b/notebooks/color_renderer_hparams.ipynb
@@ -31,6 +31,8 @@
     "import torch\n",
     "import os.path as osp\n",
     "import matplotlib.pyplot as plt\n",
+    "import math\n",
+    "import optuna\n",
     "\n",
     "from nphm_tum import env_paths as mono_env_paths\n",
     "from nphm_tum.models.neural3dmm import construct_n3dmm, load_checkpoint\n",
@@ -237,7 +239,7 @@
     }
    ],
    "source": [
-    "ten = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "ten = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]\n",
     "male_ids = []\n",
     "female_ids = []\n",
     "young_ids = []\n",
@@ -295,13 +297,13 @@
     "        no_beard_ids.append(no_beard_idx)\n",
     "\n",
     "# Expression\n",
-    "cheeks_puffed_ids = [i for i, x in enumerate(avl_expr) if x == 15][:10]\n",
-    "eyes_closed_ids = [i for i, x in enumerate(avl_expr) if x == 16][:10]\n",
-    "brows_raised_ids = [i for i, x in enumerate(avl_expr) if x == 18][:10]\n",
+    "cheeks_puffed_ids = [i for i, x in enumerate(avl_expr) if x == 15][:15]\n",
+    "eyes_closed_ids = [i for i, x in enumerate(avl_expr) if x == 16][:15]\n",
+    "brows_raised_ids = [i for i, x in enumerate(avl_expr) if x == 18][:15]\n",
     "\n",
     "# Emotion\n",
-    "happy_ids = [i for i, x in enumerate(avl_expr) if x == 14][:10]\n",
-    "sad_ids = [i for i, x in enumerate(avl_expr) if x == 17][:10]   \n",
+    "happy_ids = [i for i, x in enumerate(avl_expr) if x == 14][:15]\n",
+    "sad_ids = [i for i, x in enumerate(avl_expr) if x == 17][:15]   \n",
     "    \n",
     "\n",
     "# --- Precompute CLIP Text Embeddings ---\n",
@@ -330,11 +332,18 @@
    "outputs": [],
    "source": [
     "def get_CLIP_score(id, exp, prompt, camera_params, phong_params, light_params):\n",
-    "    id = latent_codes.codebook[id].embedding.weight[50].unsqueeze(0).unsqueeze(0)\n",
-    "    ex = latent_codes.codebook[exp].embedding.weight[77].unsqueeze(0).unsqueeze(0)\n",
-    "    app = latent_codes.codebook[id].embedding.weight[50].unsqueeze(0).unsqueeze(0)\n",
+    "    id = latent_codes.codebook['geo'].embedding.weight[id].unsqueeze(0).unsqueeze(0)\n",
+    "    ex = latent_codes.codebook['exp'].embedding.weight[exp].unsqueeze(0).unsqueeze(0)\n",
+    "    app = latent_codes.codebook['app'].embedding.weight[id].unsqueeze(0).unsqueeze(0)\n",
     "    lat_rep = [id, ex, app]\n",
-    "    CLIP_score, _, _, _ = forward(lat_rep, prompt, camera_params, phong_params, light_params)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        CLIP_score, _, _, img = forward(lat_rep, prompt, camera_params, phong_params, light_params)\n",
+    "\n",
+    "    plt.imshow(img.detach().numpy())\n",
+    "    plt.axis('off')  # Turn off axes\n",
+    "    plt.show()\n",
+    "\n",
     "    return CLIP_score\n",
     "\n",
     "def get_mean_CLIP(camera_params, phong_params, light_params, prompt, ids, exp=None):\n",
@@ -347,14 +356,44 @@
     "    all_CLIPS_tensor = torch.stack(CLIPS)\n",
     "    mean_CLIP = torch.mean(all_CLIPS_tensor)\n",
     "\n",
+    "    return mean_CLIP\n",
+    "\n",
     "def penalty(vector, k):\n",
     "    vector[vector < 0] *= k\n",
     "    return vector\n",
     "\n",
     "def analyze(hparams):\n",
-    "    c\n",
-    "    p\n",
-    "    l\n",
+    "    c = {\n",
+    "        \"camera_distance\": hparams['camera_distance_factor'] * hparams['focal_length'], # ensures appropriate head size\n",
+    "        \"camera_angle\": 45.,\n",
+    "        \"focal_length\": hparams['focal_length'],\n",
+    "        \"max_ray_length\": (hparams['camera_distance_factor'] + 1) * hparams['focal_length'] + 1.5,\n",
+    "        # Image\n",
+    "        \"resolution_y\": 180,\n",
+    "        \"resolution_x\": 180\n",
+    "    }\n",
+    "    p = {\n",
+    "        \"ambient_coeff\": hparams['ambient_coeff'],\n",
+    "        \"diffuse_coeff\": hparams['diffuse_coeff'],\n",
+    "        \"specular_coeff\": hparams['specular_coeff'],\n",
+    "        \"shininess\": hparams['shininess'],\n",
+    "        # Colors\n",
+    "        \"object_color\": None,\n",
+    "        \"background_color\": hparams['background_color']\n",
+    "    }\n",
+    "    l = {\n",
+    "        \"amb_light_color\": hparams['amb_light_color'],\n",
+    "        # light 1\n",
+    "        \"light_intensity_1\": hparams['light_intensity_1'],\n",
+    "        \"light_color_1\": hparams['light_color'],\n",
+    "        \"light_dir_1\": hparams['light_dir_1'],\n",
+    "        # light p\n",
+    "        \"light_intensity_p\": hparams['light_intensity_p'],\n",
+    "        \"light_color_p\": hparams['light_color'],\n",
+    "        \"light_pos_p\": torch.tensor([hparams['light_radius_p'] * math.sqrt(1 - hparams['light_u1_p']**2) * math.cos(2*math.pi*hparams['light_u2_p']),\n",
+    "                                     hparams['light_radius_p'] * math.sqrt(1 - hparams['light_u1_p']**2) * math.sin(2*math.pi*hparams['light_u2_p']), \n",
+    "                                     hparams['light_radius_p'] * hparams['light_u1_p']])\n",
+    "    }\n",
     "\n",
     "    # Gender\n",
     "    i_man = get_mean_CLIP(c, p, l, prompt_man, male_ids) - get_mean_CLIP(c, p, l, prompt_man, female_ids)\n",
@@ -388,7 +427,62 @@
     "    scores_penalized = penalty(scores, 10)\n",
     "    scores_avg = torch.mean(scores_penalized, dim=0)\n",
     "    print('scores penalized: ', scores_penalized)\n",
-    "    print('scores_avg: ', scores_avg)"
+    "    print('scores_avg: ', scores_avg)\n",
+    "\n",
+    "    return scores_avg\n",
+    "\n",
+    "def objective(trial):\n",
+    "    # Define the hyperparameters to tune and their search spaces\n",
+    "    search_space = {\n",
+    "        # Camera\n",
+    "        \"camera_distance_factor\": trial.suggest_float('camera_distance_factor', 0.1, 0.8), \n",
+    "        \"focal_length\": trial.suggest_float('focal_length', 1.0, 5.0),\n",
+    "        # Phong\n",
+    "        \"ambient_coeff\": trial.suggest_float('ambient_coeff', 0.1, 1.), \n",
+    "        \"diffuse_coeff\": trial.suggest_float('diffuse_coeff', 0.1, 1.0), \n",
+    "        \"specular_coeff\": trial.suggest_float('specular_coeff', 0.1, 1.), \n",
+    "        \"shininess\": trial.suggest_float('shininess', 0.1, 100, log=True),\n",
+    "        # Colors\n",
+    "        \"background_color\": torch.tensor([\n",
+    "            trial.suggest_float('background_color_0', 0.0, 1.),\n",
+    "            trial.suggest_float('background_color_1', 0.0, 1.),\n",
+    "            trial.suggest_float('background_color_2', 0.0, 1.)\n",
+    "        ]),\n",
+    "        # Light\n",
+    "        \"amb_light_color\": torch.tensor([\n",
+    "            trial.suggest_float('amb_light_color_0', 0.5, 1.),\n",
+    "            trial.suggest_float('amb_light_color_1', 0.5, 1.),\n",
+    "            trial.suggest_float('amg_light_color_2', 0.5, 1.)\n",
+    "        ]),\n",
+    "        # light 1\n",
+    "        \"light_intensity_1\": trial.suggest_float('light_intensity_1', 0.2, 3.0), \n",
+    "        \"light_color\": torch.tensor([\n",
+    "            trial.suggest_float('light_color_0', 0.7, 1.0),\n",
+    "            trial.suggest_float('light_color_1', 0.7, 1.0),\n",
+    "            trial.suggest_float('light_color_2', 0.7, 1.0)\n",
+    "        ]),\n",
+    "        \"light_dir_1\": torch.tensor([\n",
+    "            trial.suggest_float('light_dir_1_0', -1., -0.),\n",
+    "            trial.suggest_float('light_dir_1_1', -1., -0.),\n",
+    "            trial.suggest_float('light_dir_1_2', -1., -0.)\n",
+    "        ]),\n",
+    "        # light p\n",
+    "        \"light_intensity_p\": trial.suggest_float('light_intensity_p', 0., 2.), \n",
+    "        \"light_radius_p\": trial.suggest_float('light_radius_p', 1., 4.), \n",
+    "        \"light_u1_p\": trial.suggest_float('light_u1_p', -1.0, 1.0),\n",
+    "        \"light_u2_p\": trial.suggest_float('light_u2_p', 0., 1.)\n",
+    "    }\n",
+    "\n",
+    "    hparams.update(search_space)\n",
+    "    \n",
+    "    return analyze(hparams)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    study = optuna.create_study(storage=\"sqlite:///optuna_study_renderparams_new.db\", study_name=\"render_params\", direction='maximize', load_if_exists=True)\n",
+    "    study.optimize(objective, n_trials=1)\n",
+    "        \n",
+    "    best_params = study.best_params\n",
+    "    print(best_params)"
    ]
   }
  ],
